<resources>
    <string name="app_name">Absence2.0</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="link_login">Mot de passe oublié ?</string>
    <string name="title_activity_login1">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">Cet identifiant est invalide</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect </string>
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="drawer_open">Ouvrir le menu</string>
    <string name="drawer_close">Fermer le menu</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">PARAMETRES</string>
    <string name="action_accueil">ACCUEIL</string>
    <string name="action_profile">PROFILE</string>
    <string name="action_absences">ABSENCES</string>
    <string name="action_deconnecter">SE DECONNECTER</string>
    <string name="title_activity_page_prof">PageProf</string>
    <string name="title_activity_login">Connexion</string>
    <string name="retard">Retard</string>
    <string name="absent">Absent</string>
    <string name="present">Présent</string>
<<<<<<< HEAD
=======


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> dev


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
</resources>
