<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/accueil_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_home_white_24dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/accueil_group_text"
            style="@style/TextView.GuillotineItem"
            android:text="@string/action_accueil" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_person_white_24dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/profile_group_text"
            style="@style/TextView.GuillotineItem"
            android:text="@string/action_profile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/absence_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_view_week_white_24dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/absence_group_text"
            style="@style/TextView.GuillotineItem"
            android:text="@string/action_absences" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settins_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings_applications_white_24dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/settins_group_text"
            style="@style/TextView.GuillotineItem"
            android:text="@string/action_settings" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height" />

    <LinearLayout
        android:id="@+id/deconnection_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_exit_to_app_white_24dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/deconnection_group_text"
            style="@style/TextView.GuillotineItem"
            android:text="@string/action_deconnecter" />
    </LinearLayout>
</LinearLayout>