<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
         >

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/profile_group"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_profile" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/action_profile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/absence_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@android:drawable/ic_delete" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/action_absences" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settins_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextView.GuillotineItem.Selected"
            android:text="@string/action_settings" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height" />

    <LinearLayout
        android:id="@+id/deconnection_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@android:drawable/ic_delete" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/action_deconnecter" />
    </LinearLayout>
</LinearLayout>