<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/prof_background_list">


        
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/TextView.List_prof"

            android:id="@+id/text"/>


        <ImageButton
            android:id="@+id/expandable_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_more"
            android:layout_alignBottom="@+id/text"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/text"
            android:background="@color/prof_background_list"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/expandable"
        android:background="@color/guillotine_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/guillotine_background">

            <ImageButton
                android:id="@+id/button_absence_epf"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                app:srcCompat="@android:drawable/ic_delete" />

            <ImageButton
                android:id="@+id/boutton_retard"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                app:srcCompat="@android:drawable/presence_invisible" />

            <ImageButton

                android:id="@+id/button_presence_epf"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                app:srcCompat="@android:drawable/presence_online" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/guillotine_background">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/absent"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retard"
                android:layout_marginLeft="60dp"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/present"
                android:layout_marginLeft="60dp"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/guillotine_background"></LinearLayout>


    </LinearLayout>

</LinearLayout>